--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,43 @@
-# Project exclude paths
-/out/
-.idea
+# Compiled class files
 *.class
-*.war
-*.ear
-target/
-build/
-bin/
+
+# Log files
 *.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Virtual machine crash logs
+hs_err_pid*
+replay_pid*
+
+# IDE specific files
+.idea/
+*.iml
+.vscode/
+.eclipse/
+.settings/
+.project
+.classpath
+
+# Build directories
+bin/
+build/
+target/
+out/
+
+# OS specific files
 .DS_Store
-*.pdf
-*.csv
-db.properties
+Thumbs.db
